Version
-Changed all functions to individual R script files rather than single master script. Why didn't I do this years ago??!
-At suggestion of Fabricio Villalobos, added option to expandTaxonTree that allows branch lengths to be retained and the added lower-taxa are connected with zero-length branches. Only useful for very specific purposes, please use with caution.

Version 1.8.2 - 09-03-13
-Added sample retiolitid graptolite dataset, try data(retiolinae)
-Small fix to time-scaling functions to avoid bug associated with geiger 1.99
-Added minor option to simFossilTaxa to change taxon sorting
-Added slight change to warning message for taxa2phylo in case data that looks like times of observeration from merged cryptic taxa is passed to it
-Slight change to simPaleoTrees so that cryptic taxa are never merged when sampleRanges is applied (since that breaks taxa2phylo)
-Following error reports from users using old versions of R, have now restricted this paleotree update to require R 3.0.0

Version 1.8.1 - 04-03-13
-Removed dependency on geiger by changing plotTraitgram to only use ace in ape

Version 1.8 - 02-22-13
-simTermTaxaAdvanced had a bug which scrambled taxon names; this is fixed
-Small changes to error checking in trueTermTaxaTree to stop erroneous error messages in environments with excessive numeric precision
-added new argument 'int.times' to multiDiv to allow prior intervals to be added (note this change previosuly accidentally left out of v1.8 changelog)
-added new argument 'inc.term.adj' to timePaleoPhy at the suggestion of Shan Huang which allows terminal ranges to be included for adjusting branch lengths under the various non-'basic' timescaling method options

Version 1.7 - 12-30-12
-added new argument 'point.occur' bin_timePaleoPhy and bin_cal3TimePaleoPhy to allow for datasets composed on point-occurance/single-find taxa (i.e. FAD is equal to LAD for all taxa), following a conversation with G. Hunt