@@ -1,6 +1,6 @@
 plotTraitgram<-function(trait,tree,trait.name="'trait'",conf.int=TRUE,lwd=1.5){
 	#traitgram plotted using ML ASR from geiger (or ace() from ape if ci=TRUE)
-	if(class(tree)!="phylo"){stop("Error: tree is not of class phylo")}
+	if(!is(tree, "phylo")){stop("Error: tree is not of class phylo")}
 	if(is.null(tree$root.time)){tree$root.time<-max(dist.nodes(tree)[Ntip(tree)+1,1:Ntip(tree)])}
 	times<-tree$root.time-dist.nodes(tree)[Ntip(tree)+1,]
 	if(conf.int){
