@@ -1,5 +1,6 @@
 rootSplit<-function(tree){
 	#returns a list with the daughter taxa of the two clades at the root split
+	if(!is(tree, "phylo")){stop("Error: tree is not of class phylo")}
 	tips<-lapply(tree$edge[tree$edge[,1]==(Ntip(tree)+1),2],function(zz) 
 		if(zz>Ntip(tree)){tree$tip.label[prop.part(tree)[[zz-Ntip(tree)]]]
 			}else{tree$tip.label[zz]})
