@@ -1,5 +1,5 @@
 unitLengthTree<-function(tree){
-	if(class(tree)!="phylo"){stop("Error: tree is not of class phylo")}
+	if(!is(tree, "phylo")){stop("Error: tree is not of class phylo")}
 	tree$edge.length<-rep(1,Nedge(tree))
 	tree$root.time<-NULL
 	return(tree)
